# sentipy

./: README.md  README.rst  pyproject.toml
.github/workflows/: pythonpackage.yml  runtests.yml
docs/: api.rst  conf.py  gettingstarted.rst  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  sentipy.doctree  sentipy.lib.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sentipy.html  sentipy.lib.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sentipy/: fapar.html
docs/_build/html/_modules/sentipy/lib/: activations.html  neuralnet.html  preprocessing.html
docs/_build/html/_sources/: index.rst.txt  sentipy.lib.rst.txt  sentipy.rst.txt
sentipy/: fapar.py  s2_toolbox.py  settings.py
sentipy/lib/: neuralnet.py
tests/: test_canopy_water.py  test_fapar.py  test_fcover.py  test_network.py  test_neuron.py  test_normaliser.py  test_sentipy.py
