[tool.poetry]
name = "sentipy"
version = "0.1.0"
description = "Python implementations of Sentinel 2 Toolbox L2 products & spectral indices"
license = "GPL-3.0-only"
authors = ["UpstatePedro"]
readme = "README.md"
repository = "https://github.com/UpstatePedro/sentipy"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
